# nav2_smc_controller

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: nav2_params.yaml
include/nav2_smc_controller/: smc_controller.hpp
src/: smc_controller.cpp
test/: test_smc.cpp
