cmake_minimum_required(VERSION 3.8)
project(nav2_smc_controller)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake       REQUIRED)
find_package(rclcpp            REQUIRED)
find_package(rclcpp_lifecycle  REQUIRED)
find_package(nav2_core         REQUIRED)
find_package(nav2_costmap_2d   REQUIRED)
find_package(nav2_util         REQUIRED)
find_package(nav_msgs          REQUIRED)
find_package(geometry_msgs     REQUIRED)
find_package(std_msgs          REQUIRED)
find_package(tf2               REQUIRED)
find_package(tf2_ros           REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(pluginlib         REQUIRED)

set(DEPS
  rclcpp rclcpp_lifecycle nav2_core nav2_costmap_2d nav2_util
  nav_msgs geometry_msgs std_msgs tf2 tf2_ros tf2_geometry_msgs pluginlib
)

add_library(${PROJECT_NAME} SHARED src/smc_controller.cpp)

target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

ament_target_dependencies(${PROJECT_NAME} ${DEPS})
pluginlib_export_plugin_description_file(nav2_core plugins.xml)

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install(DIRECTORY include/ DESTINATION include/)
install(FILES plugins.xml  DESTINATION share/${PROJECT_NAME})
install(DIRECTORY config/  DESTINATION share/${PROJECT_NAME}/config)

ament_package()
